src/test/AmbiguousField4/AmbiguousField4.expected
error: AmbiguousField4.panda:18:6: reference to 'length' is ambiguous, both field length (of type panda.core.Int32) and method length:=() match
1 error
