src/test/AmbiguousField4/AmbiguousField4.panda
================================================================================
The reference to "t.length:=" is ambiguous because the class has both a field 
and an assignment method by that name. Outside of the class with both field and
method visible, we should complain about ambiguity.
================================================================================
@final
class AmbiguousField4 {
    var length:Int := 5

    @self
    method length:=(i:Int) {
        Console.writeLine("calling length:=")
    }
}

method main() {
    var t := AmbiguousField4()
    t.length := 0
    Console.writeLine("shouldn't see this")
}